Fixes #38.  Smaller font sizes on mobile.  Added better media variables.

--- a/scss/_navs.scss
+++ b/scss/_navs.scss
@@ -286,8 +286,11 @@
       line-height: 1;
       padding: 20px;
 
-      @media (min-width: 1200px) {
-        padding: 20px 25px;
+      @media (min-width: $asu-screen-lg-min) {
+        font-size: .9em;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-top: 21px;
       }
     }
   }
